{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 422,
  "lineage": "984089a4-5e42-bc78-5465-34581627b421",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e10e3563a6de8baa",
            "domain": "vpc",
            "id": "eipalloc-0e10e3563a6de8baa",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-73-230-242.compute-1.amazonaws.com",
            "public_ip": "52.73.230.242",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "final_fer_eip_nat"
            },
            "tags_all": {
              "Name": "final_fer_eip_nat",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_proxy_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022c105c6758f9275",
            "association_id": "eipassoc-023c08bbb732ba89b",
            "domain": "vpc",
            "id": "eipalloc-022c105c6758f9275",
            "instance": "i-010ebc0c1ee769d05",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0eb82f217fc74f88f",
            "private_dns": "ip-10-10-4-9.ec2.internal",
            "private_ip": "10.10.4.9",
            "public_dns": "ec2-34-235-41-237.compute-1.amazonaws.com",
            "public_ip": "34.235.41.237",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "final_fer_eip_prozy"
            },
            "tags_all": {
              "Name": "final_fer_eip_prozy",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastion_fer",
            "aws_instance.proxy_fer",
            "aws_security_group.sg_bastion_fer",
            "aws_security_group.sg_proxy_fer",
            "aws_subnet.sb_pub1_fer",
            "aws_subnet.sb_pub2_fer",
            "aws_vpc.vpc_fer",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app1_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06eecef118bbf9259",
            "arn": "arn:aws:ec2:us-east-1:509130302659:instance/i-01deca39cb2a34c69",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01deca39cb2a34c69",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ac_xl_pract_ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0405e36c0b2477139",
            "private_dns": "ip-10-10-1-11.ec2.internal",
            "private_ip": "10.10.1.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03fb82eeb685f5af1",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d74340143bb9ded",
            "tags": {
              "Name": "final_fer_app1"
            },
            "tags_all": {
              "Name": "final_fer_app1",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f8746cf2b1479d44"
            ]
          },
          "dependencies": [
            "aws_instance.bastion_fer",
            "aws_instance.proxy_fer",
            "aws_security_group.sg_app_fer",
            "aws_security_group.sg_bastion_fer",
            "aws_security_group.sg_lb_fer",
            "aws_security_group.sg_proxy_fer",
            "aws_subnet.sb_priv1_fer",
            "aws_subnet.sb_pub1_fer",
            "aws_subnet.sb_pub2_fer",
            "aws_vpc.vpc_fer",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app2_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06eecef118bbf9259",
            "arn": "arn:aws:ec2:us-east-1:509130302659:instance/i-0b71c7280ec8805d7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b71c7280ec8805d7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ac_xl_pract_ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0631bf79d10e727da",
            "private_dns": "ip-10-10-2-10.ec2.internal",
            "private_ip": "10.10.2.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d1d5ce86adb13e46",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076538ddcb81b9900",
            "tags": {
              "Name": "final_fer_app2"
            },
            "tags_all": {
              "Name": "final_fer_app2",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f8746cf2b1479d44"
            ]
          },
          "dependencies": [
            "aws_instance.bastion_fer",
            "aws_instance.proxy_fer",
            "aws_security_group.sg_app_fer",
            "aws_security_group.sg_bastion_fer",
            "aws_security_group.sg_lb_fer",
            "aws_security_group.sg_proxy_fer",
            "aws_subnet.sb_priv2_fer",
            "aws_subnet.sb_pub1_fer",
            "aws_subnet.sb_pub2_fer",
            "aws_vpc.vpc_fer",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06eecef118bbf9259",
            "arn": "arn:aws:ec2:us-east-1:509130302659:instance/i-039aade242f1d3980",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039aade242f1d3980",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ac_xl_pract_ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-033e31568d39f794c",
            "private_dns": "ip-10-10-3-7.ec2.internal",
            "private_ip": "10.10.3.7",
            "public_ip": "44.193.210.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b526e51eb530b245",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0442c2801a58f4ba5",
            "tags": {
              "Name": "final_fer_bastion"
            },
            "tags_all": {
              "Name": "final_fer_bastion",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d6046223fb6c91c"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_bastion_fer",
            "aws_subnet.sb_pub1_fer",
            "aws_vpc.vpc_fer",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "proxy_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06eecef118bbf9259",
            "arn": "arn:aws:ec2:us-east-1:509130302659:instance/i-010ebc0c1ee769d05",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010ebc0c1ee769d05",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ac_xl_pract_ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eb82f217fc74f88f",
            "private_dns": "ip-10-10-4-9.ec2.internal",
            "private_ip": "10.10.4.9",
            "public_ip": "52.87.248.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04c9936d1e5b352f2",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08dc53636868f87f9",
            "tags": {
              "Name": "final_fer_proxy"
            },
            "tags_all": {
              "Name": "final_fer_proxy",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00f2de5ed4ba00755"
            ]
          },
          "dependencies": [
            "aws_instance.bastion_fer",
            "aws_security_group.sg_bastion_fer",
            "aws_security_group.sg_proxy_fer",
            "aws_subnet.sb_pub1_fer",
            "aws_subnet.sb_pub2_fer",
            "aws_vpc.vpc_fer",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:internet-gateway/igw-03bf6203e67701c9a",
            "id": "igw-03bf6203e67701c9a",
            "owner_id": "509130302659",
            "tags": {
              "Name": "final_fer_ig"
            },
            "tags_all": {
              "Name": "final_fer_ig",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "vpc_id": "vpc-04015010f3d659957"
          },
          "dependencies": [
            "aws_vpc.vpc_fer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:loadbalancer/app/tf-lb-20220510124743915200000002/b70b9f2e45d63966",
            "arn_suffix": "app/tf-lb-20220510124743915200000002/b70b9f2e45d63966",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-tf-lb-20220510124743915200000002-482637542.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:loadbalancer/app/tf-lb-20220510124743915200000002/b70b9f2e45d63966",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20220510124743915200000002",
            "security_groups": [
              "sg-0d46937f776271ca0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00d74340143bb9ded"
              },
              {
                "subnet_id": "subnet-076538ddcb81b9900"
              }
            ],
            "subnets": [
              "subnet-00d74340143bb9ded",
              "subnet-076538ddcb81b9900"
            ],
            "tags": {
              "Name": "final_fer_lb"
            },
            "tags_all": {
              "Name": "final_fer_lb",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "vpc_id": "vpc-04015010f3d659957",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.bastion_fer",
            "aws_instance.proxy_fer",
            "aws_security_group.sg_bastion_fer",
            "aws_security_group.sg_lb_fer",
            "aws_security_group.sg_proxy_fer",
            "aws_subnet.sb_priv1_fer",
            "aws_subnet.sb_priv2_fer",
            "aws_subnet.sb_pub1_fer",
            "aws_subnet.sb_pub2_fer",
            "aws_vpc.vpc_fer",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "list_lb_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:listener/app/tf-lb-20220510124743915200000002/b70b9f2e45d63966/6605040559f9bdd3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/tf-20220510124554026700000001/6f905ef7c9c20669",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:listener/app/tf-lb-20220510124743915200000002/b70b9f2e45d63966/6605040559f9bdd3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:loadbalancer/app/tf-lb-20220510124743915200000002/b70b9f2e45d63966",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.bastion_fer",
            "aws_instance.proxy_fer",
            "aws_lb.lb_fer",
            "aws_lb_target_group.tg_lb_fer",
            "aws_security_group.sg_bastion_fer",
            "aws_security_group.sg_lb_fer",
            "aws_security_group.sg_proxy_fer",
            "aws_subnet.sb_priv1_fer",
            "aws_subnet.sb_priv2_fer",
            "aws_subnet.sb_pub1_fer",
            "aws_subnet.sb_pub2_fer",
            "aws_vpc.vpc_fer",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_lb_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/tf-20220510124554026700000001/6f905ef7c9c20669",
            "arn_suffix": "targetgroup/tf-20220510124554026700000001/6f905ef7c9c20669",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/tf-20220510124554026700000001/6f905ef7c9c20669",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20220510124554026700000001",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "target_type": "instance",
            "vpc_id": "vpc-04015010f3d659957"
          },
          "dependencies": [
            "aws_vpc.vpc_fer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "at1_lb_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/tf-20220510124554026700000001/6f905ef7c9c20669-20220510124822952500000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/tf-20220510124554026700000001/6f905ef7c9c20669",
            "target_id": "i-01deca39cb2a34c69"
          },
          "dependencies": [
            "aws_instance.app1_fer",
            "aws_instance.bastion_fer",
            "aws_instance.proxy_fer",
            "aws_lb_target_group.tg_lb_fer",
            "aws_security_group.sg_app_fer",
            "aws_security_group.sg_bastion_fer",
            "aws_security_group.sg_lb_fer",
            "aws_security_group.sg_proxy_fer",
            "aws_subnet.sb_priv1_fer",
            "aws_subnet.sb_pub1_fer",
            "aws_subnet.sb_pub2_fer",
            "aws_vpc.vpc_fer",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "at2_lb_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/tf-20220510124554026700000001/6f905ef7c9c20669-20220510124823270200000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:509130302659:targetgroup/tf-20220510124554026700000001/6f905ef7c9c20669",
            "target_id": "i-0b71c7280ec8805d7"
          },
          "dependencies": [
            "aws_instance.app2_fer",
            "aws_instance.bastion_fer",
            "aws_instance.proxy_fer",
            "aws_lb_target_group.tg_lb_fer",
            "aws_security_group.sg_app_fer",
            "aws_security_group.sg_bastion_fer",
            "aws_security_group.sg_lb_fer",
            "aws_security_group.sg_proxy_fer",
            "aws_subnet.sb_priv2_fer",
            "aws_subnet.sb_pub1_fer",
            "aws_subnet.sb_pub2_fer",
            "aws_vpc.vpc_fer",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e10e3563a6de8baa",
            "connectivity_type": "public",
            "id": "nat-08b8bf18d2f8094b9",
            "network_interface_id": "eni-06b1144d1314ec8cd",
            "private_ip": "10.10.3.6",
            "public_ip": "52.73.230.242",
            "subnet_id": "subnet-0442c2801a58f4ba5",
            "tags": {
              "Name": "final_fer_nat"
            },
            "tags_all": {
              "Name": "final_fer_nat",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            }
          },
          "dependencies": [
            "aws_eip.eip_fer",
            "aws_internet_gateway.ig_fer",
            "aws_subnet.sb_pub1_fer",
            "aws_vpc.vpc_fer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_priv_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:route-table/rtb-09fbfe0c58d205d8e",
            "id": "rtb-09fbfe0c58d205d8e",
            "owner_id": "509130302659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08b8bf18d2f8094b9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "final_fer_rt_priv"
            },
            "tags_all": {
              "Name": "final_fer_rt_priv",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-04015010f3d659957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_fer",
            "aws_internet_gateway.ig_fer",
            "aws_nat_gateway.nat_fer",
            "aws_subnet.sb_pub1_fer",
            "aws_vpc.vpc_fer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_pub_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:route-table/rtb-03b841fe877262837",
            "id": "rtb-03b841fe877262837",
            "owner_id": "509130302659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03bf6203e67701c9a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "final_fer_rt_pub"
            },
            "tags_all": {
              "Name": "final_fer_rt_pub",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-04015010f3d659957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig_fer",
            "aws_vpc.vpc_fer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as1_rtpriv_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004f727b60818e38a",
            "route_table_id": "rtb-09fbfe0c58d205d8e",
            "subnet_id": "subnet-00d74340143bb9ded"
          },
          "dependencies": [
            "aws_eip.eip_fer",
            "aws_internet_gateway.ig_fer",
            "aws_nat_gateway.nat_fer",
            "aws_route_table.rt_priv_fer",
            "aws_subnet.sb_priv1_fer",
            "aws_subnet.sb_pub1_fer",
            "aws_vpc.vpc_fer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as1_rtpub_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd277f99c1ed8f58",
            "route_table_id": "rtb-03b841fe877262837",
            "subnet_id": "subnet-0442c2801a58f4ba5"
          },
          "dependencies": [
            "aws_internet_gateway.ig_fer",
            "aws_route_table.rt_pub_fer",
            "aws_subnet.sb_pub1_fer",
            "aws_vpc.vpc_fer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as2_rtpriv_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c8ec8d320202b48",
            "route_table_id": "rtb-09fbfe0c58d205d8e",
            "subnet_id": "subnet-076538ddcb81b9900"
          },
          "dependencies": [
            "aws_eip.eip_fer",
            "aws_internet_gateway.ig_fer",
            "aws_nat_gateway.nat_fer",
            "aws_route_table.rt_priv_fer",
            "aws_subnet.sb_priv2_fer",
            "aws_subnet.sb_pub1_fer",
            "aws_vpc.vpc_fer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as2_rtpub_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031f6fe944b508bac",
            "route_table_id": "rtb-03b841fe877262837",
            "subnet_id": "subnet-08dc53636868f87f9"
          },
          "dependencies": [
            "aws_internet_gateway.ig_fer",
            "aws_route_table.rt_pub_fer",
            "aws_subnet.sb_pub2_fer",
            "aws_vpc.vpc_fer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_app_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-0f8746cf2b1479d44",
            "description": "sg for bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8746cf2b1479d44",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "lb",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d46937f776271ca0"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "lb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d46937f776271ca0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "final_fer_sg_app",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "final_fer_sg_app"
            },
            "tags_all": {
              "Name": "final_fer_sg_app",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-04015010f3d659957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.bastion_fer",
            "aws_instance.proxy_fer",
            "aws_security_group.sg_bastion_fer",
            "aws_security_group.sg_lb_fer",
            "aws_security_group.sg_proxy_fer",
            "aws_subnet.sb_pub1_fer",
            "aws_subnet.sb_pub2_fer",
            "aws_vpc.vpc_fer",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_bastion_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-05d6046223fb6c91c",
            "description": "sg for bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d6046223fb6c91c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "181.30.225.240/32"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "final_fer_sg_bastion",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "final_fer_sg_bastion"
            },
            "tags_all": {
              "Name": "final_fer_sg_bastion",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-04015010f3d659957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_fer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_lb_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-0d46937f776271ca0",
            "description": "sg for bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d46937f776271ca0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.4.9/32"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.10.4.9/32"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.10.4.9/32"
                ],
                "description": "proxy",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "final_fer_sg_lb",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "final_fer_sg_lb"
            },
            "tags_all": {
              "Name": "final_fer_sg_lb",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-04015010f3d659957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.bastion_fer",
            "aws_instance.proxy_fer",
            "aws_security_group.sg_bastion_fer",
            "aws_security_group.sg_proxy_fer",
            "aws_subnet.sb_pub1_fer",
            "aws_subnet.sb_pub2_fer",
            "aws_vpc.vpc_fer",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_proxy_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-00f2de5ed4ba00755",
            "description": "sg for bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f2de5ed4ba00755",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.3.7/32"
                ],
                "description": "bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "final_fer_sg_proxy",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "final_fer_sg_proxy"
            },
            "tags_all": {
              "Name": "final_fer_sg_proxy",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-04015010f3d659957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.bastion_fer",
            "aws_security_group.sg_bastion_fer",
            "aws_subnet.sb_pub1_fer",
            "aws_vpc.vpc_fer",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sb_priv1_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-00d74340143bb9ded",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d74340143bb9ded",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final_fer_sub_priv1"
            },
            "tags_all": {
              "Name": "final_fer_sub_priv1",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "vpc_id": "vpc-04015010f3d659957"
          },
          "dependencies": [
            "aws_vpc.vpc_fer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sb_priv2_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-076538ddcb81b9900",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076538ddcb81b9900",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final_fer_sub_priv2"
            },
            "tags_all": {
              "Name": "final_fer_sub_priv2",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "vpc_id": "vpc-04015010f3d659957"
          },
          "dependencies": [
            "aws_vpc.vpc_fer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sb_pub1_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-0442c2801a58f4ba5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.3.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0442c2801a58f4ba5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509130302659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final_fer_sub_pub1"
            },
            "tags_all": {
              "Name": "final_fer_sub_pub1",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "vpc_id": "vpc-04015010f3d659957"
          },
          "dependencies": [
            "aws_vpc.vpc_fer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sb_pub2_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-08dc53636868f87f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.4.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08dc53636868f87f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509130302659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final_fer_sub_pub2"
            },
            "tags_all": {
              "Name": "final_fer_sub_pub2",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "vpc_id": "vpc-04015010f3d659957"
          },
          "dependencies": [
            "aws_vpc.vpc_fer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_fer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:vpc/vpc-04015010f3d659957",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-046601ac804f04939",
            "default_route_table_id": "rtb-03432fafeab65aa3c",
            "default_security_group_id": "sg-07cbbee910e837e9a",
            "dhcp_options_id": "dopt-b99482db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04015010f3d659957",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03432fafeab65aa3c",
            "owner_id": "509130302659",
            "tags": {
              "Name": "final_fer_vpc"
            },
            "tags_all": {
              "Name": "final_fer_vpc",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            }
          }
        }
      ]
    }
  ]
}